# iOS-app-build-time-optimisation-skill

./: .gitignore  AGENTS.md  CHANGELOG.md  CHECKS.md  LICENSE  README.md
.claude-plugin/: marketplace.json
agents/: openai.yaml
assets/: README.md
references/: build-settings-best-practices.md  critical-path-method.md  defaults.md  sources.md
schemas/: build-benchmark.schema.json  diagnosis.schema.json  fix-result.schema.json
scripts/: benchmark.py  critical_path.py  diagnose.py  doctor.py  fix.py  simulate.py  verify-sync.py
scripts/adapters/: bazel_adapter.py  tuist_adapter.py  xcode_adapter.py
scripts/analyzers/: __init__.py  asset_catalog.py  build_setting.py  spm_graph.py
scripts/fixers/: __init__.py  asset_catalog.py  build_setting.py  script_phase.py  spm_graph.py
scripts/simulators/: __init__.py  asset_catalog.py  build_setting.py  script_phase.py  spm_graph.py
skills/ios-build-diagnose/: SKILL.md
skills/ios-build-diagnose/references/: critical-path-method.md  defaults.md
skills/ios-build-diagnose/scripts/: critical_path.py
skills/ios-build-diagnose/scripts/adapters/: bazel_adapter.py  tuist_adapter.py  xcode_adapter.py
skills/ios-build-diagnose/scripts/analyzers/: __init__.py  asset_catalog.py  build_setting.py  script_phase.py  spm_graph.py
skills/ios-build-doctor/: SKILL.md
skills/ios-build-fix/: SKILL.md
skills/ios-build-fix/references/: build-settings-best-practices.md  defaults.md  sources.md
skills/ios-build-fix/schemas/: diagnosis.schema.json  history.schema.json
skills/ios-build-fix/scripts/: critical_path.py  fix.py
skills/ios-build-fix/scripts/adapters/: __init__.py  tuist_adapter.py  xcode_adapter.py
skills/ios-build-fix/scripts/fixers/: __init__.py  build_setting.py  registry.py  script_phase.py  spm_graph.py
skills/ios-build-measure/: SKILL.md
skills/ios-build-measure/scripts/: history_db.py
skills/ios-build-measure/scripts/adapters/: __init__.py  bazel_adapter.py  xcode_adapter.py
skills/ios-build-simulate/: SKILL.md
skills/ios-build-simulate/references/: build-settings-best-practices.md  critical-path-method.md  defaults.md
skills/ios-build-simulate/schemas/: simulation.schema.json
skills/ios-build-simulate/scripts/: simulate.py
skills/ios-build-simulate/scripts/simulators/: __init__.py  asset_catalog.py  registry.py  script_phase.py
tests/bazel-smoke-ios/: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md
tests/bazel-smoke-ios/App/: BUILD.bazel  Counter.swift  Formatter.swift  Greeter.swift
tests/bazel-smoke-ios/Lib/: Adder.swift  BUILD.bazel  Multiplier.swift
tests/tuist-smoke-ios/: .gitignore  Project.swift  README.md
tests/tuist-smoke-ios/Sources/: Counter.swift  Formatter.swift  Greeter.swift
