module(name = "bazel_smoke_ios", version = "0.0.0")

bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "rules_swift", version = "3.6.1", repo_name = "build_bazel_rules_swift")
bazel_dep(name = "rules_apple", version = "4.5.3", repo_name = "build_bazel_rules_apple")
bazel_dep(name = "apple_support", version = "2.5.4", repo_name = "build_bazel_apple_support")
